Upgraded Angular version (to accomodate new material expansion panel), and adds an expansion panel for the DemoSettings, so that they can be hidden for user testing.

--- a/src/app/customizable-demo-form.component.html
+++ b/src/app/customizable-demo-form.component.html
@@ -1,201 +1,217 @@
-<div>
-  <!-- Feedback thresholds -->
-  <div class="setting">
-    <div>Feedback Threshold</div>
-    <md-slider
-       class="slider"
-       [invert]="true"
-       [min]="0"
-       [max]="100"
-       [step]="1"
-       [disabled]="customizeScoreThresholds"
-       [(ngModel)]="sliderValue"
-       (change)="onSliderValueChange($event); onDemoSettingsChanged()"></md-slider>
-     <div [ngClass]="{'disabled': customizeScoreThresholds}">
-       Show feedback when a comment has a toxicity score of {{100 - sliderValue}}-100%.
-     </div>
+<mat-expansion-panel [expanded]="showDemoSettings"
+                     (opened)="showDemoSettings = true; onSettingsChanged();"
+                     (closed)="showDemoSettings = false; onSettingsChanged();" >
+  <mat-expansion-panel-header>
+    Demo Settings
+  </mat-expansion-panel-header>
 
-    <div class="customizeSwitch">
-      <md-slide-toggle
-         [(ngModel)]="customizeScoreThresholds"
-         (change)="onDemoSettingsChanged()">Customize</md-slide-toggle>
+  <div>
+    <!-- Feedback thresholds -->
+    <div class="setting">
+      <div>Feedback Threshold</div>
+      <mat-slider
+         class="slider"
+         [invert]="true"
+         [min]="0"
+         [max]="100"
+         [step]="1"
+         [disabled]="customizeScoreThresholds"
+         [(ngModel)]="sliderValue"
+         (change)="onSliderValueChange($event); onSettingsChanged()"></mat-slider>
+       <div [ngClass]="{'disabled': customizeScoreThresholds}">
+         Show feedback when a comment has a toxicity score of {{100 - sliderValue}}-100%.
+       </div>
+
+      <div class="customizeSwitch sliderCustomizeSwitch">
+        <mat-slide-toggle
+           [(ngModel)]="customizeScoreThresholds"
+           (change)="onSettingsChanged()">Customize</mat-slide-toggle>
+      </div>
     </div>
-  </div>
-  <div class="setting customizableSetting" *ngIf="customizeScoreThresholds">
-    <md-input-container [floatPlaceholder]="'always'">
-      <input mdInput
-             [(ngModel)]="scoreThresholds[0]"
-             (input)="scoreThresholds = scoreThresholds.slice(); onDemoSettingsChanged()"
-             type="number"
-             placeholder="Min threshold for displaying feedback"/>
-    </md-input-container>
-    <md-input-container [floatPlaceholder]="'always'">
-      <input mdInput
-             [(ngModel)]="scoreThresholds[1]"
-             (input)="scoreThresholds = scoreThresholds.slice(); onDemoSettingsChanged()"
-             type="number"
-             placeholder="Threshold for medium toxicity"/>
-    </md-input-container>
-    <md-input-container [floatPlaceholder]="'always'">
-      <input mdInput
-             [(ngModel)]="scoreThresholds[2]"
-             (input)="scoreThresholds = scoreThresholds.slice(); onDemoSettingsChanged()"
-             type="number"
-             placeholder="Threshold for high toxicity"/>
-    </md-input-container>
-  </div>
-
-  <!-- Configuration for user suggestions. -->
-  <div class="setting">
-    <md-select placeholder="Correction style"
-               floatPlaceholder="always"
-               [(ngModel)]="configuration"
-               (change)="onDemoSettingsChanged()">
-      <md-option *ngFor="let configuration of configurations" [value]="configuration">
-        {{ configuration }}
-      </md-option>
-    </md-select>
-  </div>
-
-  <!-- Loading icon/widget style. -->
-  <div class="setting">
-    <md-select placeholder="Loading icon style"
-               floatPlaceholder="always"
-               [(ngModel)]="selectedLoadingIconStyle"
-               (change)="onDemoSettingsChanged()">
-      <md-option *ngFor="let loadingIconStyle of loadingIconStyles"
-                 [value]="loadingIconStyle">
-        {{loadingIconStyle}}
-      </md-option>
-    </md-select>
-  </div>
-
-  <!-- Feedback message -->
-  <div class="setting">
-    <md-select placeholder="Feedback message"
-               floatPlaceholder="always"
-               [disabled]="useCustomFeedbackText"
-               [(ngModel)]="selectedFeedbackTextScheme"
-               (change)="onDemoSettingsChanged()">
-      <md-option *ngFor="let feedbackTextScheme of feedbackTextSchemes"
-                 [value]="feedbackTextScheme">
-        {{feedbackTextScheme.name}}
-      </md-option>
-    </md-select>
-    <div class="customizeSwitch">
-      <md-slide-toggle [(ngModel)]="useCustomFeedbackText">Customize</md-slide-toggle>
-    </div>
-  </div>
-
-  <div class="setting customizableSetting" *ngIf="useCustomFeedbackText">
-    <div>
-      <md-input-container class="feedbackText" [floatPlaceholder]="'always'">
-        <input mdInput
-               [(ngModel)]="customFeedbackTextScheme[0]"
-               (input)="customFeedbackTextScheme = customFeedbackTextScheme.slice(); onDemoSettingsChanged()"
-               placeholder="Feedback text for a low toxicity"/>
-      </md-input-container>
+    <div class="setting customizableSetting" *ngIf="customizeScoreThresholds">
+      <mat-input-container shouldPlaceholderFloat="true">
+        <input matInput
+               [(ngModel)]="scoreThresholds[0]"
+               (input)="scoreThresholds = scoreThresholds.slice(); onSettingsChanged()"
+               type="number"
+               placeholder="Min threshold for displaying feedback"/>
+      </mat-input-container>
+      <mat-input-container shouldPlaceholderFloat="true">
+        <input matInput
+               [(ngModel)]="scoreThresholds[1]"
+               (input)="scoreThresholds = scoreThresholds.slice(); onSettingsChanged()"
+               type="number"
+               placeholder="Threshold for medium toxicity"/>
+      </mat-input-container>
+      <mat-input-container shouldPlaceholderFloat="true">
+        <input matInput
+               [(ngModel)]="scoreThresholds[2]"
+               (input)="scoreThresholds = scoreThresholds.slice(); onSettingsChanged()"
+               type="number"
+               placeholder="Threshold for high toxicity"/>
+      </mat-input-container>
     </div>
 
-    <div>
-      <md-input-container class="feedbackText" [floatPlaceholder]="'always'">
-        <input mdInput
-               [(ngModel)]="customFeedbackTextScheme[1]"
-               (input)="customFeedbackTextScheme = customFeedbackTextScheme.slice(); onDemoSettingsChanged()"
-               placeholder="Feedback text for a medium toxicity"/>
-      </md-input-container>
+    <!-- Configuration for user suggestions. -->
+    <div class="setting">
+      <mat-form-field>
+        <mat-select placeholder="Correction style"
+                   shouldPlaceholderFloat="true"
+                   [(ngModel)]="configuration"
+                   (change)="onSettingsChanged()">
+          <mat-option *ngFor="let configuration of configurations" [value]="configuration">
+            {{ configuration }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
     </div>
 
-    <div>
-      <md-input-container class="feedbackText" [floatPlaceholder]="'always'">
-        <input mdInput
-               [(ngModel)]="customFeedbackTextScheme[2]"
-               (input)="customFeedbackTextScheme = customFeedbackTextScheme.slice(); onDemoSettingsChanged()"
-               placeholder="Feedback text for a high toxicity"/>
-      </md-input-container>
+    <!-- Loading icon/widget style. -->
+    <div class="setting">
+      <mat-form-field>
+        <mat-select placeholder="Loading icon style"
+                   shouldPlaceholderFloat="true"
+                   [(ngModel)]="selectedLoadingIconStyle"
+                   (change)="onSettingsChanged()">
+          <mat-option *ngFor="let loadingIconStyle of loadingIconStyles"
+                     [value]="loadingIconStyle">
+            {{loadingIconStyle}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+    <!-- Feedback message -->
+    <div class="setting">
+      <mat-form-field>
+        <mat-select placeholder="Feedback message"
+                   shouldPlaceholderFloat="true"
+                   [disabled]="useCustomFeedbackText"
+                   [(ngModel)]="selectedFeedbackTextScheme"
+                   (change)="onSettingsChanged()">
+          <mat-option *ngFor="let feedbackTextScheme of feedbackTextSchemes"
+                     [value]="feedbackTextScheme">
+            {{feedbackTextScheme.name}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <div class="customizeSwitch">
+        <mat-slide-toggle [(ngModel)]="useCustomFeedbackText">Customize</mat-slide-toggle>
+      </div>
+    </div>
+
+    <div class="setting customizableSetting" *ngIf="useCustomFeedbackText">
+      <div>
+        <mat-input-container class="feedbackText" shouldPlaceholderFloat="true">
+          <input matInput
+                 [(ngModel)]="customFeedbackTextScheme[0]"
+                 (input)="customFeedbackTextScheme = customFeedbackTextScheme.slice(); onSettingsChanged()"
+                 placeholder="Feedback text for a low toxicity"/>
+        </mat-input-container>
+      </div>
+
+      <div>
+        <mat-input-container class="feedbackText" shouldPlaceholderFloat="true">
+          <input matInput
+                 [(ngModel)]="customFeedbackTextScheme[1]"
+                 (input)="customFeedbackTextScheme = customFeedbackTextScheme.slice(); onSettingsChanged()"
+                 placeholder="Feedback text for a medium toxicity"/>
+        </mat-input-container>
+      </div>
+
+      <div>
+        <mat-input-container class="feedbackText" shouldPlaceholderFloat="true">
+          <input matInput
+                 [(ngModel)]="customFeedbackTextScheme[2]"
+                 (input)="customFeedbackTextScheme = customFeedbackTextScheme.slice(); onSettingsChanged()"
+                 placeholder="Feedback text for a high toxicity"/>
+        </mat-input-container>
+      </div>
+    </div>
+
+    <!-- Color theme -->
+    <div class="setting">
+      <mat-form-field>
+        <mat-select placeholder="Color theme"
+                   shouldPlaceholderFloat="true"
+                   [(ngModel)]="selectedColorScheme"
+                   [disabled]="useCustomColorScheme"
+                   (change)="onSettingsChanged()">
+          <mat-option *ngFor="let colorScheme of colorSchemes" [value]="colorScheme">
+            {{colorScheme.name}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <div class="customizeSwitch">
+        <mat-slide-toggle [(ngModel)]="useCustomColorScheme"
+                         (change)="onSettingsChanged()">Customize</mat-slide-toggle>
+      </div>
+    </div>
+
+    <div class="setting customizableSetting" *ngIf="useCustomColorScheme">
+      <input readonly
+             [(colorPicker)]="customColorScheme[0]"
+             (colorPickerChange)="customColorScheme = customColorScheme.slice(); onSettingsChanged()"
+             [style.background]="customColorScheme[0]"
+             class="colorPicker"/>
+      <input readonly
+             [(colorPicker)]="customColorScheme[1]"
+             (colorPickerChange)="customColorScheme = customColorScheme.slice(); onSettingsChanged()"
+             [style.background]="customColorScheme[1]"
+             class="colorPicker"/>
+      <input readonly
+             [(colorPicker)]="customColorScheme[2]"
+             (colorPickerChange)="customColorScheme = customColorScheme.slice(); onSettingsChanged()"
+             [style.background]="customColorScheme[2]"
+             class="colorPicker"/>
+      <button mat-raised-button (click)="resetToDefaultColors(); onSettingsChanged()">Reset to default colors</button>
+    </div>
+
+
+    <!-- Other settings -->
+    <div class="setting">
+      <mat-slide-toggle [(ngModel)]="showPercentage" (change)="onSettingsChanged()">Show percentage</mat-slide-toggle>
+    </div>
+
+    <div class="setting">
+      <mat-slide-toggle [(ngModel)]="showMoreInfoLink" (change)="onSettingsChanged()">Show more info link</mat-slide-toggle>
+    </div>
+
+    <div class="setting">
+      <mat-slide-toggle [(ngModel)]="hideLoadingIconAfterLoad"
+                       (change)="onSettingsChanged()">Hide loading icon after load
+      </mat-slide-toggle>
+    </div>
+
+    <div class="setting">
+      <mat-slide-toggle [(ngModel)]="hideLoadingIconForScoresBelowMinThreshold"
+        (change)="onSettingsChanged()">Hide loading icon for scores below the minimum threshold.
+      </mat-slide-toggle>
+    </div>
+
+    <div class="setting">
+      <mat-slide-toggle [(ngModel)]="useGapi"
+                       (change)="updateApiKey($event); onSettingsChanged()">Use gapi
+      </mat-slide-toggle>
+      <mat-input-container>
+        <input matInput
+               [disabled]="!useGapi"
+               [(ngModel)]="apiKey"
+               (input)="onSettingsChanged()"
+               placeholder="API key"/>
+      </mat-input-container>
+    </div>
+
+    <div class="setting">
+      <mat-input-container>
+        <input matInput
+               [(ngModel)]="userFeedbackPromptText"
+               (input)="onSettingsChanged()"
+               placeholder="Feedback prompt"/>
+      </mat-input-container>
     </div>
   </div>
-
-  <!-- Color theme -->
-  <div class="setting">
-    <md-select placeholder="Color theme"
-               floatPlaceholder="always"
-               [(ngModel)]="selectedColorScheme"
-               [disabled]="useCustomColorScheme"
-               (change)="onDemoSettingsChanged()">
-      <md-option *ngFor="let colorScheme of colorSchemes" [value]="colorScheme">
-        {{colorScheme.name}}
-      </md-option>
-    </md-select>
-    <div class="customizeSwitch">
-      <md-slide-toggle [(ngModel)]="useCustomColorScheme"
-                       (change)="onDemoSettingsChanged()">Customize</md-slide-toggle>
-    </div>
-  </div>
-
-  <div class="setting customizableSetting" *ngIf="useCustomColorScheme">
-    <input readonly
-           [(colorPicker)]="customColorScheme[0]"
-           (colorPickerChange)="customColorScheme = customColorScheme.slice(); onDemoSettingsChanged()"
-           [style.background]="customColorScheme[0]"
-           class="colorPicker"/>
-    <input readonly
-           [(colorPicker)]="customColorScheme[1]"
-           (colorPickerChange)="customColorScheme = customColorScheme.slice(); onDemoSettingsChanged()"
-           [style.background]="customColorScheme[1]"
-           class="colorPicker"/>
-    <input readonly
-           [(colorPicker)]="customColorScheme[2]"
-           (colorPickerChange)="customColorScheme = customColorScheme.slice(); onDemoSettingsChanged()"
-           [style.background]="customColorScheme[2]"
-           class="colorPicker"/>
-    <button md-raised-button (click)="resetToDefaultColors(); onDemoSettingsChanged()">Reset to default colors</button>
-  </div>
-
-
-  <!-- Other settings -->
-  <div class="setting">
-    <md-slide-toggle [(ngModel)]="showPercentage" (change)="onDemoSettingsChanged()">Show percentage</md-slide-toggle>
-  </div>
-
-  <div class="setting">
-    <md-slide-toggle [(ngModel)]="showMoreInfoLink" (change)="onDemoSettingsChanged()">Show more info link</md-slide-toggle>
-  </div>
-
-  <div class="setting">
-    <md-slide-toggle [(ngModel)]="hideLoadingIconAfterLoad"
-                     (change)="onDemoSettingsChanged()">Hide loading icon after load
-    </md-slide-toggle>
-  </div>
-
-  <div class="setting">
-    <md-slide-toggle [(ngModel)]="hideLoadingIconForScoresBelowMinThreshold"
-      (change)="onDemoSettingsChanged()">Hide loading icon for scores below the minimum threshold.
-    </md-slide-toggle>
-  </div>
-
-  <div class="setting">
-    <md-slide-toggle [(ngModel)]="useGapi"
-                     (change)="updateApiKey($event); onDemoSettingsChanged()">Use gapi
-    </md-slide-toggle>
-    <md-input-container>
-      <input mdInput
-             [disabled]="!useGapi"
-             [(ngModel)]="apiKey"
-             (input)="onDemoSettingsChanged()"
-             placeholder="API key"/>
-    </md-input-container>
-  </div>
-
-  <div class="setting">
-    <md-input-container>
-      <input mdInput
-             [(ngModel)]="userFeedbackPromptText"
-             (input)="onDemoSettingsChanged()"
-             placeholder="Feedback prompt"/>
-    </md-input-container>
-  </div>
-</div>
+</mat-expansion-panel>
 
 <div class="divider"></div>
 
