--- a/src/app/customizable-demo-form.component.css
+++ b/src/app/customizable-demo-form.component.css
@@ -31,14 +31,19 @@ body {
 }
 
 .customizeSwitch {
-  display: block;
+  display: inline-block;
   margin-top: 10px;
   margin-bottom: 10px;
+  margin-left: 20px;
 }
 
-md-select {
-  margin-top: 20px;
-  width: 500px;
+.customizeSwitch.sliderCustomizeSwitch {
+  display: block;
+  margin-left: 0;
+}
+
+mat-form-field {
+  width: 400px;
 }
 
 .setting {
