Started adding some new tests for the emoji setting. Work in progress.

--- a/src/app/perspective-status.component.html
+++ b/src/app/perspective-status.component.html
@@ -27,6 +27,7 @@
     <div *ngIf="loadingIconStyle === loadingIconStyleConst.EMOJI">
       <button
            #emojiStatusWidget
+           id="emojiStatusWidget"
            class="dot emojiWidget"
            (click)="toggleScore()">
         <img #smileEmoji class="iconEmoji"
