Test front-end implementation of invisible recaptcha.

--- a/src/app/convai-checker.component.html
+++ b/src/app/convai-checker.component.html
@@ -25,4 +25,10 @@
     (scoreChangeAnimationCompleted)="handleScoreChangeAnimationCompleted()"
     (modelInfoLinkClicked)="handleModelInfoLinkClicked()">
   </perspective-status>
+  <script src='https://www.google.com/recaptcha/api.js'></script>
+  <div id="test_recaptcha"
+       class="g-recaptcha"
+       data-sitekey="6Le0TDsUAAAAAFS1GN2aVF7QOaPxkEq6Qgr-vr6V"
+       data-size="invisible">
+  </div>
 </div>
