--- a/src/app/customizable-demo-form.component.html
+++ b/src/app/customizable-demo-form.component.html
@@ -182,6 +182,13 @@
                        (change)="onSettingsChanged()">Hide loading icon after load
       </mat-slide-toggle>
     </div>
+  
+    <div class="setting">
+      <mat-slide-toggle [(ngModel)]="alwaysHideLoadingIcon"
+        (change)="onSettingsChanged()">Always hide the loading icon.
+      </mat-slide-toggle>
+    </div>
+
 
     <div class="setting">
       <mat-slide-toggle [(ngModel)]="hideLoadingIconForScoresBelowMinThreshold"
