Some initial working tests for various widget visibility settings.

--- a/src/app/perspective-status.component.html
+++ b/src/app/perspective-status.component.html
@@ -47,7 +47,7 @@
                                  'layer': true,
                                  'hiddenLayer': !layersAnimating && currentLayerIndex !== 0}"
                      [attr.aria-hidden]="currentLayerIndex !== 0">
-      <div class="layerText">
+      <div id="layerText" class="layerText">
         <!-- For layer 1 text, configurations EXTERNAL and DEMO_SITE are the same.-->
         <div>
           <div id="noBorderButtonscoreInfo"
