Adds communityId to demoSettings and plumbing to send it through to the server.

--- a/src/app/customizable-demo-form.component.html
+++ b/src/app/customizable-demo-form.component.html
@@ -217,6 +217,15 @@
                placeholder="Feedback prompt"/>
       </mat-input-container>
     </div>
+
+    <div class="communityId">
+      <mat-input-container>
+        <input matInput
+               [(ngModel)]="communityId"
+               (input)="onSettingsChanged()"
+               placeholder="Community id"/>
+      </mat-input-container>
+    </div>
   </div>
 </mat-expansion-panel>
 
