Adds support for fetching emoji images from our cloud bucket when using the plugin endpoint, since that doesn't have access to local image assets.

--- a/src/app/modules/convai-checker/convai-checker.component.html
+++ b/src/app/modules/convai-checker/convai-checker.component.html
@@ -21,6 +21,7 @@
     [hideLoadingIconForScoresBelowMinThreshold]="demoSettings.hideLoadingIconForScoresBelowMinThreshold"
     [alwaysHideLoadingIcon]="demoSettings.alwaysHideLoadingIcon"
     [loadingIconStyle]="demoSettings.loadingIconStyle"
+    [hasLocalAssets]="!demoSettings.usePluginEndpoint"
     (commentFeedbackSubmitted)="onCommentFeedbackReceived($event)"
     (scoreChangeAnimationCompleted)="handleScoreChangeAnimationCompleted()"
     (modelInfoLinkClicked)="handleModelInfoLinkClicked()">
