Reverts unintended change.

--- a/src/app/customizable-demo-form.component.html
+++ b/src/app/customizable-demo-form.component.html
@@ -213,6 +213,13 @@
       <mat-slide-toggle [(ngModel)]="usePluginEndpoint"
                        (change)="onSettingsChanged()">Use plugin endpoint
       </mat-slide-toggle>
+      <mat-form-field>
+        <input matInput
+               [disabled]="!usePluginEndpoint"
+               [(ngModel)]="pluginEndpointUrl"
+               (input)="onSettingsChanged()"
+               placeholder="Plugin server URL"/>
+      </mat-form-field>
     </div>
 
 
