fix dependencies for building as library

--- a/src/app/modules/convai-checker/perspective-status.component.html
+++ b/src/app/modules/convai-checker/perspective-status.component.html
@@ -121,7 +121,8 @@
                class="widgetText"
                role="status"
                tabindex=0>
-            <span>Scored {{(score.toFixed(2) * 100).toFixed(0)}}% by the <a href="https://conversationai.github.io/">Perspective "Toxicity" analyzer</a>
+
+            <span>Scored {{percentScore()}}% by the <a href="https://conversationai.github.io/">Perspective "Toxicity" analyzer</a>
             </span>
           </div>
         </div> <!-- End configuration EXTERNAL-->
